| Summary: | ASTERISK-28940: /channels/create doesn't get any parameters from the body | ||
| Reporter: | sungtae kim (pchero) | Labels: | |
| Date Opened: | 2020-06-09 06:57:18 | Date Closed: | 2020-06-09 09:09:02 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_ari_channels |
| Versions: | 16.11.0 17.5.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The /channels/create ARI gets no body parameters. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-06-09 06:57:19.327-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Friendly Automation (friendly-automation) 2020-06-09 09:09:04.245-0500 Change 14536 merged by Joshua Colp: res_ari: Fix create request body parameter parsing. [https://gerrit.asterisk.org/c/asterisk/+/14536|https://gerrit.asterisk.org/c/asterisk/+/14536] By: Friendly Automation (friendly-automation) 2020-06-09 09:09:18.282-0500 Change 14535 merged by Friendly Automation: res_ari: Fix create request body parameter parsing. [https://gerrit.asterisk.org/c/asterisk/+/14535|https://gerrit.asterisk.org/c/asterisk/+/14535] By: Friendly Automation (friendly-automation) 2020-06-09 09:11:17.219-0500 Change 14510 merged by Friendly Automation: res_ari: Fix create request body parameter parsing. [https://gerrit.asterisk.org/c/asterisk/+/14510|https://gerrit.asterisk.org/c/asterisk/+/14510] By: Friendly Automation (friendly-automation) 2020-06-09 09:11:34.012-0500 Change 14538 merged by Joshua Colp: res_ari: Fix create request body parameter parsing. [https://gerrit.asterisk.org/c/asterisk/+/14538|https://gerrit.asterisk.org/c/asterisk/+/14538] By: Friendly Automation (friendly-automation) 2020-06-09 09:11:52.646-0500 Change 14537 merged by Joshua Colp: res_ari: Fix create request body parameter parsing. [https://gerrit.asterisk.org/c/asterisk/+/14537|https://gerrit.asterisk.org/c/asterisk/+/14537] | ||